argocd/apps/fooocus/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fooocus
  labels:
    app.kubernetes.io/name: fooocus
spec:
  serviceName: fooocus
  revisionHistoryLimit: 3
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: fooocus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fooocus
    spec:
      runtimeClassName: nvidia
      containers:
        - name: fooocus
          image: "ghcr.io/lllyasviel/fooocus:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7865
              protocol: TCP
          resources:
            requests:
              memory: 8Gi
              nvidia.com/gpu: "1"
              cpu: 10m
            limits:
              memory: 16Gi
              nvidia.com/gpu: "1"
              cpu: "4"
          readinessProbe:
            tcpSocket:
              port: 7865
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 7865
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /content/data
              name: data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
